Display glyphicon hearts instead of text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="row"><button class="btn btn-primary" id="keyU">U</button><button class="btn btn-primary" id="keyV">V</button><button class="btn btn-primary" id="keyW">W</button><button class="btn btn-primary" id="keyX">X</button><button class="btn btn-primary" id="keyY">Y</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyZ">Z</button></div>
                 </div>
-                <div class="col-md-1" id="lives"></div>
+                <div class="col-md-1 text-center" id="lives"></div>
                 <div class="col-md-3"></div>
             </div>
             <div class="row">
