Improve styling, add autofocus

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
                     <h3>Name for highscores</h3>
                     <div class="input-group">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                        <input type="text" class="form-control" id="playerName" placeholder="Enter your name here">
+                        <input type="text" class="form-control" id="playerName" placeholder="Enter your name here" autofocus="autofocus">
                     </div>
                     <h3>Difficulty</h3>
                     <div class="radio">
-                        <label><input type="radio" name="difficulty" value="easy"><strong>Easy</strong> (6 starting lives, +1 life every 2 levels, 25 points per level)</label>
+                        <label><input type="radio" name="difficulty" value="easy"><strong>Easy</strong><br /> (6 starting lives, +1 life every 2 lvls, 25 points per lvl)</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="difficulty" value="normal" checked><strong>Normal</strong> (6 starting lives, +1 life every 5 levels, 50 points per level)</label>
+                        <label><input type="radio" name="difficulty" value="normal" checked><strong>Normal</strong><br /> (6 starting lives, +1 life every 5 lvls, 50 points per lvl)</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="difficulty" value="hard"><strong>Hard</strong> (6 starting lives, +1 life every 10 levels, 100 points per level)</label>
+                        <label><input type="radio" name="difficulty" value="hard"><strong>Hard</strong><br /> (6 starting lives, +1 life every 10 lvls, 100 points per lvl)</label>
                     </div>
                     <span class="input-group-btn"><button class="btn btn-primary" type="button">Play!</button></span>
                 </form>
