Add difficulty detection

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
                         <input type="text" class="form-control" id="playerName" placeholder="Enter your name here" autofocus="autofocus">
                     </div>
                     <h3>Difficulty</h3>
-                    <div class="radio">
-                        <label><input type="radio" name="difficulty" value="easy"><strong>Easy</strong><br /> (6 starting lives, +1 life every 2 lvls, 25 points per lvl)</label>
-                    </div>
-                    <div class="radio">
-                        <label><input type="radio" name="difficulty" value="normal" checked><strong>Normal</strong><br /> (6 starting lives, +1 life every 5 lvls, 50 points per lvl)</label>
-                    </div>
-                    <div class="radio">
-                        <label><input type="radio" name="difficulty" value="hard"><strong>Hard</strong><br /> (6 starting lives, +1 life every 10 lvls, 100 points per lvl)</label>
+                    <div id="difficulty">
+                        <div class="radio">
+                            <label><input type="radio" name="difficulty" value="easy"><strong>Easy</strong><br /> (6 starting lives, +1 life every 2 lvls, 25 points per lvl)</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="difficulty" value="normal" checked><strong>Normal</strong><br /> (6 starting lives, +1 life every 5 lvls, 50 points per lvl)</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="difficulty" value="hard"><strong>Hard</strong><br /> (6 starting lives, +1 life every 10 lvls, 100 points per lvl)</label>
+                        </div>
                     </div>
                     <span class="input-group-btn"><button class="btn btn-primary" type="button">Play!</button></span>
                 </form>
