Nicer display of letters

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3"></div>
-                <div class="col-md-5" id="letters">
+                <div class="col-md-5 text-center" id="letters">
                     <div class="row"><button class="btn btn-primary" id="keyA">A</button><button class="btn btn-primary" id="keyB">B</button><button class="btn btn-primary" id="keyC">C</button><button class="btn btn-primary" id="keyD">D</button><button class="btn btn-primary" id="keyE">E</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyF">F</button><button class="btn btn-primary" id="keyG">G</button><button class="btn btn-primary" id="keyH">H</button><button class="btn btn-primary" id="keyI">I</button><button class="btn btn-primary" id="keyJ">J</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyK">K</button><button class="btn btn-primary" id="keyL">L</button><button class="btn btn-primary" id="keyM">M</button><button class="btn btn-primary" id="keyN">N</button><button class="btn btn-primary" id="keyO">O</button></div>
