--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-3"></div>
         </div>
-        <div class="row" id="howto">
+        <div class="row" id="instructions">
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <h2>How to play?</h2>
