--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <div class="row" id="highscores">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-            <h2>Hall of Fame</h2>
+                <h2>Hall of Fame</h2>
+                <div></div>
             </div>
             <div class="col-md-3"></div>
         </div>
