--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <h2>Difficulty</h2>
                     <div id="difficulty">
                         <div class="radio">
-                            <label><input type="radio" name="difficulty" value="easy"><strong>Easy</strong><br /> (6 starting lives, +1 life every 2 lvls, 25 points per lvl)</label>
+                            <label><input type="radio" name="difficulty" value="easy"><strong>Easy</strong> (6 starting <span class="glyphicon glyphicon-heart"></span>, +1 <span class="glyphicon glyphicon-heart"></span> every 2 levels, 25 points per level)</label>
                         </div>
                         <div class="radio">
-                            <label><input type="radio" name="difficulty" value="normal" checked><strong>Normal</strong><br /> (6 starting lives, +1 life every 5 lvls, 50 points per lvl)</label>
+                            <label><input type="radio" name="difficulty" value="normal" checked><strong>Normal</strong> (6 starting <span class="glyphicon glyphicon-heart"></span>, +1 <span class="glyphicon glyphicon-heart"></span> every 5 levels, 50 points per level)</label>
                         </div>
                         <div class="radio">
-                            <label><input type="radio" name="difficulty" value="hard"><strong>Hard</strong><br /> (6 starting lives, +1 life every 10 lvls, 100 points per lvl)</label>
+                            <label><input type="radio" name="difficulty" value="hard"><strong>Hard</strong> (6 starting <span class="glyphicon glyphicon-heart"></span>, +1 <span class="glyphicon glyphicon-heart"></span> every 10 levels, 100 points per level)</label>
                         </div>
                     </div>
                 </form>
@@ -39,7 +39,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <h1>How to play?</h1>
-                <p>The game selects a random word depending on your current level. The first and the last letter are shown and the remaining letters are representend as underscores (with the exception of those equal to the first and last letter). Your goal is to guess the correct word in limited number of tries. You will loose a life point with a wrong guess and if you loose all of them it's game over.</p>
+                <p>The game selects a random word depending on your current level. The first and the last letter are shown and the remaining letters are representend as underscores (with the exception of those equal to the first and last letter). Your goal is to guess the correct word in limited number of tries. You will loose a life point (<span class="glyphicon glyphicon-heart"></span>) with a wrong guess and if you loose all of them it's game over.</p>
                 <p>But fear not, mighty adventurer, when you correctly guess a word, your health bar will refill and every five levels you will gain a bonus health point. How far can you get?</p>
             </div>
             <div class="col-md-3"></div>
