Rearrange elements, remove deprecated strike tag

--- a/index.html
+++ b/index.html
@@ -54,18 +54,20 @@
         </div>
         <div id="game">
             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6" id="word"></div>
-                <div class="col-md-3"></div>
+                <div class="col-md-2"></div>
+                <div class="col-md-6 text-center" id="word"></div>
+                <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
             </div>
             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6" id="wrongGuesses"></div>
-                <div class="col-md-3"></div>
+                <div class="col-md-2"></div>
+                <div class="col-md-6 text-center" id="wrongGuesses"></div>
+                <div class="col-md-2"></div>
+                <div class="col-md-2"></div>
             </div>
             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-5 text-center" id="letters">
+                <div class="col-md-2"></div>
+                <div class="col-md-6 text-center" id="letters">
                     <div class="row"><button class="btn btn-primary" id="keyA">A</button><button class="btn btn-primary" id="keyB">B</button><button class="btn btn-primary" id="keyC">C</button><button class="btn btn-primary" id="keyD">D</button><button class="btn btn-primary" id="keyE">E</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyF">F</button><button class="btn btn-primary" id="keyG">G</button><button class="btn btn-primary" id="keyH">H</button><button class="btn btn-primary" id="keyI">I</button><button class="btn btn-primary" id="keyJ">J</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyK">K</button><button class="btn btn-primary" id="keyL">L</button><button class="btn btn-primary" id="keyM">M</button><button class="btn btn-primary" id="keyN">N</button><button class="btn btn-primary" id="keyO">O</button></div>
@@ -74,8 +76,8 @@
                     <div class="row"><button class="btn btn-primary" id="keyZ">Z</button></div>
                     <p>Score: <span id="score"></span> @ level: <span id="level"></span></p>
                 </div>
-                <div class="col-md-1 text-center" id="lives"></div>
-                <div class="col-md-3"></div>
+                <div class="col-md-2 text-center" id="lives"></div>
+                <div class="col-md-2"></div>
             </div>
         </div>
     </div>
