Prevent letters jumping too much, move level and score

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-6 text-center" id="word"></div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2 well well-sm">Score: <span id="score"></span></div>
                 <div class="col-md-2"></div>
             </div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-6 text-center" id="wrongGuesses"></div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2 well well-sm">Level: <span id="level"></span></div>
                 <div class="col-md-2"></div>
             </div>
             <div class="row">
@@ -74,9 +74,8 @@
                     <div class="row"><button class="btn btn-primary" id="keyP">P</button><button class="btn btn-primary" id="keyQ">Q</button><button class="btn btn-primary" id="keyR">R</button><button class="btn btn-primary" id="keyS">S</button><button class="btn btn-primary" id="keyT">T</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyU">U</button><button class="btn btn-primary" id="keyV">V</button><button class="btn btn-primary" id="keyW">W</button><button class="btn btn-primary" id="keyX">X</button><button class="btn btn-primary" id="keyY">Y</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyZ">Z</button></div>
-                    <p>Score: <span id="score"></span> @ level: <span id="level"></span></p>
                 </div>
-                <div class="col-md-2 text-center" id="lives"></div>
+                <div class="col-md-2 text-center well well-sm" id="lives"></div>
                 <div class="col-md-2"></div>
             </div>
         </div>
