--- a/index.html
+++ b/index.html
@@ -52,22 +52,12 @@
             </div>
             <div class="col-md-3"></div>
         </div>
-        <div id="game">
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-6 text-center" id="word"></div>
-                <div class="col-md-2 well well-sm">Score: <span id="score"></span></div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-6 text-center" id="wrongGuesses"></div>
-                <div class="col-md-2 well well-sm">Level: <span id="level"></span></div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-6 text-center" id="letters">
+        <div class="row" id="game">
+            <div class="col-md-2"></div>
+            <div class="col-md-6 text-center">
+                <div class="row" id="word"></div>
+                <div class="row" id="wrongGuesses"></div>
+                <div id="letters">
                     <div class="row"><button class="btn btn-primary" id="keyA">A</button><button class="btn btn-primary" id="keyB">B</button><button class="btn btn-primary" id="keyC">C</button><button class="btn btn-primary" id="keyD">D</button><button class="btn btn-primary" id="keyE">E</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyF">F</button><button class="btn btn-primary" id="keyG">G</button><button class="btn btn-primary" id="keyH">H</button><button class="btn btn-primary" id="keyI">I</button><button class="btn btn-primary" id="keyJ">J</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyK">K</button><button class="btn btn-primary" id="keyL">L</button><button class="btn btn-primary" id="keyM">M</button><button class="btn btn-primary" id="keyN">N</button><button class="btn btn-primary" id="keyO">O</button></div>
@@ -75,9 +65,13 @@
                     <div class="row"><button class="btn btn-primary" id="keyU">U</button><button class="btn btn-primary" id="keyV">V</button><button class="btn btn-primary" id="keyW">W</button><button class="btn btn-primary" id="keyX">X</button><button class="btn btn-primary" id="keyY">Y</button></div>
                     <div class="row"><button class="btn btn-primary" id="keyZ">Z</button></div>
                 </div>
-                <div class="col-md-2 text-center well well-sm" id="lives"></div>
-                <div class="col-md-2"></div>
             </div>
+            <div class="col-md-2">
+                <div class="row well well-sm">Score: <span id="score"></span></div>
+                <div class="row well well-sm">Level: <span id="level"></span></div>
+                <div class="row well well-sm text-center" id="lives"></div>
+            </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
     <div class="container">
